--- a/src/style/todayweather.css
+++ b/src/style/todayweather.css
@@ -1,9 +1,8 @@
-/* Basic Styles */
 .current-forcast {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    background-color: #f0f0f0; /* Light grey background */
+    background-color: #f0f0f0; 
     border-radius: 10px;
     margin: 20px 0;
     color: #333; 
@@ -25,7 +24,7 @@
 .current-weather h4 {
     font-size: 1.5em;
     margin: 0;
-    color: #666; /* Slightly lighter grey for the header */
+    color: #666; 
 }
 
 .current-temp {
@@ -38,14 +37,14 @@
 .current-temp h1 {
     font-size: 3em;
     margin: 0;
-    color: #333; /* Darker grey for temperature */
+    color: #333;
 }
 
 .current-weather-descriptions {
     flex: 2;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 15px; /* Increased gap for better spacing */
+    gap: 15px;
     margin-left: 20px;
 }
 
@@ -72,10 +71,9 @@
 .current-weather-descriptions h1 {
     font-size: 1.4em;
     margin: 0;
-    color: #333; /* Dark text color for description items */
+    color: #333; 
 }
 
-/* Responsive Styles */
 @media (max-width: 768px) {
     .current-forcast {
         flex-direction: column;
