--- a/src/style/todayweather.css
+++ b/src/style/todayweather.css
@@ -4,7 +4,7 @@
     padding: 20px;
     background-color: #f0f0f0; 
     border-radius: 10px;
-    margin: 20px 0;
+    /* margin: 20px 0; */
     color: #333; 
 }
 
@@ -72,6 +72,28 @@
     font-size: 1.4em;
     margin: 0;
     color: #333; 
+}
+.loader-body{
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#111014;
+}
+.loader {
+  border: 8px solid #111014;
+  border-top: 8px solid #333;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 @media (max-width: 768px) {
